# booz-allen-maven-licenses

./: .gitignore  README.md  license.txt  pom.xml
.github/workflows/: build.yaml  release.yaml
booz-allen-licenses/: pom.xml
booz-allen-licenses/src/license/com/boozallen/: licenses.properties
license-example-projects/: pom.xml
license-example-projects/closed-source-examples/: pom.xml
license-example-projects/closed-source-examples/booz-allen-closed-source-java/: pom.xml
license-example-projects/closed-source-examples/booz-allen-closed-source-python/: pom.xml  pyproject.toml
license-example-projects/government-use-examples/: pom.xml
license-example-projects/government-use-examples/booz-allen-government-use-java/: LICENSE.txt  pom.xml
license-example-projects/government-use-examples/booz-allen-government-use-python/: pom.xml  pyproject.toml
license-example-projects/government-use-examples/booz-allen-government-use-python/src/booz_allen_government_use_python/: helloworld.py
license-example-projects/limited-government-use-examples/: pom.xml
license-example-projects/limited-government-use-examples/booz-allen-limited-government-use-java/: pom.xml
license-example-projects/limited-government-use-examples/booz-allen-limited-government-use-python/: pom.xml  pyproject.toml
license-example-projects/public-license-examples/: pom.xml
license-example-projects/public-license-examples/booz-allen-public-license-java/: pom.xml
license-example-projects/public-license-examples/booz-allen-public-license-python/: LICENSE  pom.xml  pyproject.toml
(+16 files in other folders)
