[tool.poetry]
name = "booz-allen-government-use-python"
version = "1.3.0.dev"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
black = ">=24.3.0"

[build-system]
requires = ["poetry-core >= 1.6.0"]
build-backend = "poetry.core.masonry.api"
